# ProteinQC

./: .gitignore  CLAUDE.md  README.md  profile_grpo.py  pyproject.toml  requirements.txt
data/results/: benchmark_multispecies.json  benchmark_multispecies_longest_orf.json  benchmark_results.json  benchmark_summary.tsv  training_curves.json
data/rnachallenge/: README.md
doc/: benchmark_multispecies_methods.md  benchmark_report.tsv  encoder_tokenizer_reference.md  research_landscape.md
lib/: smolagent.py  smolagents_tools.py
lib/agent/: baked_data.py
lib/models/: calm_encoder.py
lib/proteinqc/: __init__.py  pipeline.py
lib/proteinqc/agent/: __init__.py  data_builder.py  episode_v2.py  logger.py  rnachallenge_loader.py  tool_schema.py  train_grpo_v2.py
lib/proteinqc/data/: __init__.py  dataset.py  tokenizer.py
lib/proteinqc/metrics/: metrics.py
lib/proteinqc/models/: __init__.py  calm_encoder.py  classification_heads.py  norm_convert.py
lib/proteinqc/scripts/: bake_evidence.py  benchmark.py  download_gencode.py  download_pfam.py  save_mlp_head.py
lib/proteinqc/tools/: __init__.py  calm_scorer.py  perplexity_scorer.py  riboformer.py  riboformer_convert.py  riboformer_train.py  test_riboformer.py
lib/proteinqc/tools/data/: species_ref.npz
lib/scripts/: __init__.py  benchmark_multispecies.py  build_species_ref.py  rna_challenge_retest.py  train_agent.py  train_grpo_trl.py
lib/tools/: codon_table.py  species_detect.py
models/calm/: config.json  vocab.txt
proteinqc/: __init__.py  distributed.py  pipeline.py  smolagent.py  smolagents_tools.py
proteinqc/agent/: baked_data.py  episode.py  mlx_backend.py  prompt.py  prompt_v2.py  tool_schema.py  train_grpo.py
proteinqc/cli/: __init__.py  bake_evidence.py  benchmark.py  benchmark_multispecies.py  benchmark_zeroshot.py  extract_embeddings.py  extract_features.py  rna_challenge_retest.py  run_agent.py  save_mlp_head.py  train_agent.py  train_combiner.py  train_global_head.py  train_lora_head.py  train_moe.py  train_moe_head.py  tui.py  upcycle_moe.py  visualize_combiner.py
proteinqc/data/: dataset.py
proteinqc/models/: calm_encoder.py  classification_heads.py  moe_layer.py  triton_moe.py
proteinqc/tools/: __init__.py  calm_scorer.py  orf_scanner.py  perplexity_scorer.py  pfam_scanner.py  riboformer_scorer.py  translate.py
tests/: test_riboformer.py
