[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteinqc"
version = "0.3.0"
description = "RL/MCTS-based mRNA ORF exploration and protein quality prediction"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Gong Chen", email = "dsbchen@ucdavis.edu"}
]
keywords = ["RNA", "protein", "CaLM", "classification", "deep-learning"]

dependencies = [
    "torch>=2.0.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.24.0",
    "biopython>=1.83",
    "python-codon-tables>=0.1.12",
    "pyhmmer>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
verify = [
    "multimolecule>=0.1.0",
]
train = [
    "datasets>=2.0.0",
    "accelerate>=0.20.0",
]
deploy = [
    "coremltools>=7.0.0",
    "ane-transformers>=0.1.0",
]
agent = [
    "mlx>=0.22; sys_platform == 'darwin'",
    "mlx-lm>=0.25; sys_platform == 'darwin'",
    "psutil>=5.9.0",
]
smolagents = [
    "smolagents>=1.0.0",
    "mlx-lm>=0.25; sys_platform == 'darwin'",
]
features = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "tqdm>=4.60",
    "h5py>=3.10",
]
lora = [
    "peft>=0.11",
]
tui = [
    "rich>=13.0",
    "prompt_toolkit>=3.0",
]
scoring = [
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "shap>=0.44",
    "optuna>=3.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.scripts]
pqc = "proteinqc.cli.run_agent:main"
benchmark = "proteinqc.cli.benchmark:main"
benchmark-multispecies = "proteinqc.cli.benchmark_multispecies:main"
rna-challenge-retest = "proteinqc.cli.rna_challenge_retest:main"
bake-evidence = "proteinqc.cli.bake_evidence:main"
train-agent = "proteinqc.cli.train_agent:main"
run-agent = "proteinqc.cli.run_agent:main"
extract-features = "proteinqc.cli.extract_features:main"
train-combiner = "proteinqc.cli.train_combiner:main"
visualize-combiner = "proteinqc.cli.visualize_combiner:main"
train-lora-head = "proteinqc.cli.train_lora_head:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["proteinqc*"]
namespaces = false

[tool.setuptools.package-data]
"proteinqc.tools" = ["data/*.npz"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
